--- a/asset/CSSFile/style.css
+++ b/asset/CSSFile/style.css
@@ -17,15 +17,15 @@
     --gradient-1: linear-gradient(180deg, #7a93b826, #7a93b808);
     --gradient-2: #7a93b81A;
     --gradient-3: linear-gradient(360deg, #7a93b826, #7a93b81A);
-    --gradient-4: linear-gradient(to bottom, #d6d6d6, #8c8c8c);
-    --gradient-4:  linear-gradient(to bottom,  #1a1a1a,  #2a2a2a);;
+    --gradient-4: linear-gradient(to bottom, #d6d6d6, #f5eaeaa6);
+    --gradient-5:  linear-gradient(to bottom,  #1a1a1a,  #2a2a2a);;
     
     
    
     /*others color*/
-    --scrollbar-color: #2a2d25;
-    --scrollbar-thump:  #ffffe2;
-    --scrollbar-hover: #263040;
+    --scrollbar-color: var(--gradient-1);
+    --scrollbar-thump: #2a2a2a ;
+    --scrollbar-hover: #0a0a0a;
    
     /* transition  */
     --transition-1: 0.25s ease;
@@ -37,6 +37,10 @@
      /* fontsize  */
      --font-16: 16px;
      --font-15: 15px;
+     --font-20: 20px;
+     --font-22: 22px;
+     --font-24: 24px;
+     --font-28: 28px;
      --font-h1: 72px;
      --font-h2: 54px;
      --font-h3: 30px;
@@ -111,6 +115,14 @@
         display: block;
         text-transform: capitalize;
     }
+    .btn{
+    border: 1px solid #ffffff33;
+    padding: 15px 30px;
+    border-radius: 35px;
+    max-width: 100%;
+    cursor: pointer;
+    text-transform: capitalize;
+}
     
     input,
     textarea{
@@ -237,7 +249,7 @@
     header #head{
         background: var(--secondary-color);
         position: fixed;
-        width: 60%;
+        width: 55%;
         max-width: 100%;
         top: 5%;
         left: 50%;
@@ -246,20 +258,22 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 6px 40px;
+        padding: 6px 20px;
         border: 1px solid #ffffff15;
+        z-index: 9999;
     }
     #logo{
         max-width: 100%;
+        width: 100%;
         padding: 2px;
         transition: var(--transition-1);
     }
     #logo a img{
-        width: 80px;
+        width: 85px;
         transition: var(--transition-1);
     }
     #logo a img:hover{
-        width: 78px;
+        width: 82px;
     }
     nav{
         max-width: 100%;
@@ -267,11 +281,11 @@
         justify-content: flex-end;
         align-items: center;
        width: 100%;
-       gap: 15px;
+       gap: 10px;
     }
     nav .navLink{
         max-width: 100%;
-        margin: 0 10px;
+        margin: 0 5px;
         padding: 0 5px;
         color: var(---txt-white-grey);
         font-size: var(--font-16);
@@ -302,3 +316,299 @@
     nav .navBtn i{
         font-size: var(--font-h4);
     }
+
+    .hero{
+         max-width: 100%;
+        width: 100%;
+        height:140vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+         overflow: hidden;
+        position: sticky;
+        z-index: 1;
+    }
+    .hero .ten-slider{
+        position: sticky;
+        top: 0%;
+        margin-top: 13%;
+        left: 0%; 
+        width:100%;
+        max-width: 100%;
+        height: 120%;
+        object-fit: cover;
+         
+       
+}
+.hero::before{
+    z-index: 777;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+     /* For browsers that do not support gradients */
+    background: linear-gradient(to bottom , rgba(7, 7, 7, 0.836), #0A0A0A);
+    backdrop-filter: blur(2px);
+}
+.hero .hero-content{
+    position: absolute;
+    z-index: 999;
+    top: 20%;
+    left: 0;
+    max-width: 100%;
+    width: 100%;
+    
+}
+.hero-content .hero-container{
+   
+    max-width: 100%;
+    height: auto;
+    width: 100%;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 20px 6%;
+    gap: 80px;
+   
+}
+.hero-container .hero-card-left,
+.hero-container .hero-card-right{
+    max-width: 100%;
+    width: 100%;
+    position: relative;
+    
+}
+.hero-container .hero-card-left{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 20px;
+}
+.hero-card-left .dot-txt{
+    font-size: var(--font-15);
+    color: var(---txt-white);
+    background: var(--btn-bg-color);
+    padding: 10px 28px;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    border: 1px solid #ffffff0e;
+    border-radius: 35px;
+    transition: var(--transition-2);
+    
+
+}
+.hero-card-left .dot-txt:hover{
+    color: var(---txt-white-grey);
+    border: 1px solid #ffffff2a;
+    box-shadow: rgba(93, 94, 95, 0.082) 0px 8px 24px;
+}
+.dot-txt:hover i{
+    color: #fff;
+}
+.hero-card-left h1{
+    font-weight: 400;
+    text-transform: capitalize;
+    color: var(---txt-white);
+    position: relative;
+    margin-bottom: 15px;
+}
+.hero-card-left h1 span{
+    color: var(---txt-white-grey);
+}
+.hero-card-left h1 .h1-icon{
+    font-size:var(--font-20) ;
+    background: var(--btn-bg-color);
+    padding: 15px 16px;
+    border-radius: 50%;
+     border: 1px solid #ffffff17;
+     position: absolute;
+     top: 30px;
+     right: -70px;
+     transform: rotate(0deg);
+     transition: var(--transition-3);
+     color: var(---txt-white);
+     
+     
+}
+.hero-card-left h1:hover .h1-icon{
+    transform: rotate(-60deg);
+    right: -60px;
+    opacity: 0.7;
+    
+}
+.hero-card-left h1 p{
+    font-size: var(--font-15);
+    transform: rotate(-45deg);
+    position: absolute;
+    text-transform: lowercase;
+    bottom: 0;
+    right: -27%;
+    
+    color: var(---txt-white-grey);
+    transition: var(--transition-1);
+    opacity: 0;
+}
+.hero-card-left h1:hover p{
+    opacity: 1;
+    right: -25%;
+    bottom: -2%;
+     transform: rotate(-48deg);
+}
+.hero-card-left .hero-decs{
+    width: 90%;
+    max-width: 100%;
+    color: var(---txt-white-grey);
+    font-size: var(--font-16);
+    line-height: 25px;
+    font-weight: 500;
+
+}
+.hero-card-left .hero-btns{
+    max-width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 25px;
+    margin-top: 15px;
+}
+.hero-btns .project-btn{
+    background: var(--gradient-1);
+    color: var(---txt-white);
+    opacity: 1;
+    transition: var(--transition-2);
+    font-size: var(--font-16);
+    font-weight: 600;
+}
+.hero-btns .project-btn:hover,
+.hero-btns .contact-btn:hover{
+    opacity: 0.8;
+}
+.hero-btns .contact-btn{
+    background: var(--gradient-4);
+    color: var(---txt-blk);
+     opacity: 1;
+    transition: var(--transition-2);
+    font-size: var(--font-16);
+    font-weight: 600;
+}
+.hero-container .hero-card-right{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 45vh;
+    gap: 60px;
+   
+}
+.hero-card-right .hero-card-one,
+.hero-card-right .hero-card-two{
+    max-width: 100%;
+    position: relative;
+    
+}
+.hero-card-one .hero-card,
+.hero-card-two .hero-card{
+    width: 210px;
+    height: 140px;
+    background: var(--btn-bg-color);
+    padding: 20px;
+    max-width: 100%;
+    border-radius: 10px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  border: 1px solid #ffffff10;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  opacity: 0.8;
+  cursor: pointer;
+}
+.hero-card-right .hero-card-one:hover,
+.hero-card-right .hero-card-two:hover{
+ box-shadow: rgba(93, 93, 94, 0.075) 0px 7px 29px 0px;
+ border-radius: 10px;
+
+}
+.hero-card-right .hero-card-one{
+    transform: rotate(-12deg);
+    margin-top: -80px;
+    animation: flexUp 6s linear infinite ;
+    transition: var(--transition-1);
+    
+}
+.hero-card-right .hero-card-two{
+    transform: rotate(12deg);
+    margin-top: 100px;
+    animation: flexDown 6s linear infinite ;
+    transition: var(--transition-1);
+    
+}
+.hero-card-one .hero-card q,
+.hero-card-two .hero-card q{
+    font-size: var(--font-15);
+    word-spacing: 1px;
+    color: var(---txt-white);
+    
+}
+.hero-card-one .hero-card p,
+.hero-card-two .hero-card p{
+    font-size: var(--font-15);
+    text-align: right;
+    color: var(---txt-white-grey);
+}
+.hero-card-one img{
+    position: absolute;
+    bottom: -17%;
+    right: -5%;
+    opacity: 0.8;
+}
+.hero-card-two img{
+    position: absolute;
+    top: -17%;
+    left: -5%;
+    opacity: 0.8;
+}
+
+@keyframes flexUp {
+    0%, 100%{
+        margin-top: -80px;
+    }
+    50%{
+        margin-top: 0;
+    }
+    
+    
+    
+}
+@keyframes flexDown {
+    0%, 100%{
+        margin-top: 100px;
+    }
+    50%{
+        margin-top: 0;
+    }
+    
+    
+    
+}
+.project{
+    
+    position: absolute;
+    top: 70% ;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 999;
+    width: 90%;
+    min-height: 100vh;
+    border: 1px solid red;
+    
+    max-width: 100%;
+   
+}
+
+
