--- a/asset/CSSFile/style.css
+++ b/asset/CSSFile/style.css
@@ -205,7 +205,7 @@
     
 }
    section{
-    margin: 2% 4%;
+    margin: 2% 6%;
     max-width: 100%;
     position: relative;
     padding: 25px  0;
@@ -247,7 +247,8 @@
         position: relative;
     }
     header #head{
-        background: var(--secondary-color);
+        background: #161616b4;
+        backdrop-filter: blur(10px);
         position: fixed;
         width: 55%;
         max-width: 100%;
@@ -388,13 +389,14 @@
     align-items: flex-start;
     gap: 20px;
 }
-.hero-card-left .dot-txt{
+ .dot-txt{
     font-size: var(--font-15);
     color: var(---txt-white);
     background: var(--btn-bg-color);
     padding: 10px 28px;
     display: flex;
     gap: 10px;
+    max-width: 100%;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -478,7 +480,7 @@
     gap: 25px;
     margin-top: 15px;
 }
-.hero-btns .project-btn{
+ .project-btn{
     background: var(--gradient-1);
     color: var(---txt-white);
     opacity: 1;
@@ -486,11 +488,11 @@
     font-size: var(--font-16);
     font-weight: 600;
 }
-.hero-btns .project-btn:hover,
-.hero-btns .contact-btn:hover{
+ .project-btn:hover,
+ .contact-btn:hover{
     opacity: 0.8;
 }
-.hero-btns .contact-btn{
+ .contact-btn{
     background: var(--gradient-4);
     color: var(---txt-blk);
      opacity: 1;
@@ -593,22 +595,380 @@
         margin-top: 0;
     }
     
-    
+/* ===============================project card start here=======================  */
     
 }
 .project{
     
     position: absolute;
-    top: 70% ;
+    top: 68% ;
     left: 50%;
     transform: translateX(-50%);
     z-index: 999;
     width: 90%;
     min-height: 100vh;
-    border: 1px solid red;
-    
     max-width: 100%;
+    padding-bottom: 5%;
+
    
 }
+.project-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  max-width: 100%;
+  margin-bottom: 3%;
 
+  padding: 10px;
 
+ }
+ .project-container .project-card{
+    
+    position: relative;
+    overflow: hidden;
+    border-radius: 15px;
+  border: 1px solid var(--btn-bg-color);
+    width: 100%;
+    padding: 15px;
+    background: var(--btn-bg-color);
+    height: 400px; 
+     transition: var(--transition-2); 
+   
+    cursor: pointer;
+ 
+ }
+ 
+ .project-card img{
+     display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: transform 1s ease-in-out;
+  border-radius: 15px;
+ }
+  .project-card:nth-child(1):hover img,
+  .project-card:nth-child(4):hover img{
+  transform: scale(1.02) rotate(1deg);
+ }
+ .project-card:nth-child(2):hover img,
+  .project-card:nth-child(3):hover img{
+  transform: scale(1.02) rotate(-1deg);
+ }
+ .project-icon{
+     position: absolute;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+ 
+  padding: 10px;
+  border-radius: 50%;
+  pointer-events: none;
+ overflow: hidden;
+  max-width: 100%;
+  z-index: 999;
+ 
+ }
+ .project-card:hover .project-icon {
+  opacity: 1;
+}
+.project-icon p{
+     font-size: var(--font-16);
+     
+  max-width: 100%;
+  border: 1px solid #ffffff63;
+  backdrop-filter: blur(15px);
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 20px;
+  border-radius: 50px;
+
+  text-align: center;
+  color: var(---txt-white);
+}
+.project-card i{
+    position: absolute;
+    bottom: 5px;
+    left: 8px;
+    background: var(--btn-bg-color);
+    padding: 12px;
+    border: 1px solid #ffffff21;
+    font-size: var(--font-20);
+    border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    opacity: 1;
+    transition: var(--transition-2);
+}
+.project-card:hover i{
+    animation: hoverUp 3s linear infinite;
+    transition: var(--transition-2);
+
+}
+@keyframes hoverUp {
+    0%, 100%{
+        
+        transform: rotate(50deg);
+         transition: var(--transition-2);
+    }
+    50%{
+        
+         transform: rotate(0deg);
+         transition: var(--transition-2);
+    }
+
+    
+}
+
+.project a {
+    font-size: var(--font-h3);
+    color: var(---txt-white);
+   position: relative;
+   max-width: 100%;
+   display: block;
+}
+.project a:hover {
+    opacity: 0.7;
+}
+
+/* ======================================================================
+    ==============================main start here========================
+    ====================================================================== */
+
+main{
+    margin-top: 54%;
+}
+
+#about{
+    max-width: 100%;
+    border: 1px solid #ffffff17;
+    height: auto;
+    border-radius: 35px;
+  
+    position: relative;
+    background: var(--btn-bg-color);
+}
+.about-us{
+    margin-top: 6%;
+    margin-bottom: 5%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.about-us .dot-txt{
+    box-shadow: rgba(0, 0, 0, 0.925) 0px 5px 15px;
+   text-transform: capitalize;
+   max-width: 20%;
+}
+.about-us h2{
+    font-weight: 400;
+    margin-top: 3%;
+    text-align: center;
+}
+.about-us h2 span{
+    color: var(---txt-white-grey);
+}
+.about-us p{
+    font-size: var(--font-16);
+    color: var(---txt-white-grey);
+    margin-top: 20px;
+    text-align: center;
+}
+.about-container{
+    max-width: 100%;
+    width: 100%;
+    padding: 5px 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 55px;
+    margin-bottom: 6%;
+}
+.about-container .about-img-card{
+    width: 100%;
+    max-width: 100%;
+    background: var(--btn-bg-color);
+    padding:20px ;
+    box-shadow: rgba(0, 0, 0, 0.63) 0px 5px 15px;
+    border-radius: 15px;
+    border: 1px solid rgb(26, 25, 25);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 20px;
+    transition: var(--transition-3);
+    
+}
+.about-img-card:hover img{
+    transform: scale(1.1);
+
+}
+.about-img-card .about-img{
+    width: 100%;
+    height: 400px;
+    position: relative;
+    transition: var(--transition-2);
+    overflow: hidden;
+    
+}
+.about-img:hover img{
+    transform: scale(1.1);
+}
+.about-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+     transition:2s ease-in-out;
+}
+.about-img .about-img-badge{
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%) scale(1);
+    display: flex;
+    background: #ffffff02;
+    justify-content: center;
+    border: 1px solid #ffffff0e;
+    align-items: center;
+    backdrop-filter: blur(5px);
+    border-radius: 35px;
+    gap: 10px;
+    padding: 8px 25px;
+    transition: var(--transition-2);
+   
+}
+.about-img:hover .about-img-badge{
+    transform:translateX(-50%) scale(1.1) translateY(5%);
+}
+.about-img-badge span{
+    font-size: 13px;
+    font-weight: 300;
+    color: var(---txt-white);
+    opacity: 0.9;
+    text-transform: capitalize;
+}
+    .circle-container {
+      position: relative;
+      width: 10px;
+      height: 10px;
+    }
+
+    .circle {
+      width: 7px;
+      height: 7px;
+      background-color: #00ff55;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+    }
+
+    .glow {
+      position: absolute;
+      width: 40px;
+      height: 40px;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: radial-gradient(circle, rgba(0, 255, 85, 0.4) 30%, transparent 80%);
+      border-radius: 50%;
+      animation: pulse 5s infinite ease-in-out;
+      transition: var(--transition-2);
+    }
+
+    @keyframes pulse {
+      0% {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 0.4;
+      }
+      50% {
+        transform: translate(-50%, -50%) scale(1.4);
+        opacity: 0;
+      }
+      100% {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 0.4;
+      }
+    }
+
+.about-img-card .about-img-content{
+    max-width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 5px;
+    flex-direction: column;
+
+}
+.about-img-content h4{
+    font-weight: 500;
+}
+.about-img-content p{
+    font-size: var(--font-15);
+    color: var(---txt-white-grey);
+    margin-bottom: 15px;
+}
+.about-img-content .about-link{
+    max-width: 100%;
+    width: 100%;
+    display: flex;
+    gap: 30px;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding-bottom: 1%;
+    border-bottom: 1px solid #ffffff0c;
+}
+.about-link a{
+    font-size: var(--font-24);
+    color: var(---txt-white);
+    background: var(---txt-blk);
+    padding: 7px;
+    border-radius: 50%;
+    position: relative;
+    transition: var(--transition-1);
+    
+}
+.about-link a:hover {
+    box-shadow: rgba(165, 152, 152, 0.24) 0px 3px 8px;
+    
+}
+.about-link a i{
+    transition: var(--transition-1);
+    transform: rotate(0deg) scale(1);
+}
+.about-link a:hover i{
+    transform: rotate(2deg) scale(1.1);
+}
+.about-link a:nth-child(2)::before{
+    position: absolute;
+    content: '';
+    width: 1px;
+    height: 28px;
+    top: 50%;
+    transform: translateY(-50%);
+    left: -13px;
+    background: var(---txt-white-grey);
+    opacity: 0.2;
+
+}
+.about-link a:nth-child(2)::after{
+    position: absolute;
+    content: '';
+    width: 1px;
+    height: 28px;
+    top: 50%;
+    transform: translateY(-50%);
+    right: -13px;
+    background: var(---txt-white-grey);
+    opacity: 0.2;
+
+}
+.about-img-content a{
+    margin-top: 5%;
+    margin-bottom: 10%;
+    font-weight: 400;
+}
