--- a/asset/CSSFile/style.css
+++ b/asset/CSSFile/style.css
@@ -234,6 +234,7 @@
       box-shadow: 0 0 12px 6px rgba(255, 255, 255, 0.2);
       transform: translate(-50%, -50%);
       transition: var(--transition-1);
+    
       z-index: 9999;
     }
 
@@ -752,6 +753,9 @@ main{
     margin-top: 54%;
 }
 
+
+/* ===============================about start here=======================  */
+
 #about{
     max-width: 100%;
     border: 1px solid #ffffff17;
@@ -1083,7 +1087,16 @@ main{
 }
 
 
-
+/* ===============================process start here=======================  */
+#process{
+    max-width: 100%;
+    border-bottom: 1px solid rgb(36, 35, 35);
+    border-radius: 35px;
+    padding-bottom: 10%;
+    margin-bottom: 5px;
+    
+    
+}
 
 .slider-two-wrap{
     max-width: 100%;
@@ -1098,28 +1111,439 @@ main{
 
 
 .slider-two{
-    width: 1200px;
+    width:100%;
     height: 100%;
     max-width: 100%;
-
-    scroll-behavior: smooth;
-    max-width: 100%;
     margin: 0 auto;
-    margin-top: 5%;
+    margin-top: 2%;
     display:flex ;
     overflow-x: scroll;
     padding-top: 25px;
     scroll-behavior: smooth;
     animation: zoom 0.3s linear ease-in-out;
+    margin-bottom: 5%;
 }
 .slider-two::-webkit-scrollbar{
     display: none;
 }
  .slider-two .slider-container{
-    width: 100%;
+     width: 100%;
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto;
     grid-gap: 20px;
     padding: 10px;
     flex: none;
+  
+    background: #0000001a;
  }
+ .slider-container::after,
+ .slider-container::before{
+        content: "";
+        position: absolute;
+        top: 0;
+        width: 50px;
+        height: 100%;
+        z-index: 2;
+        pointer-events: none;
+    }
+    .slider-container::before {
+  left: 0;
+  background: linear-gradient(to right, #0A0A0A, transparent);
+}
+
+.slider-container::after {
+  right: 0;
+  background: linear-gradient(to left, #0A0A0A, transparent);
+}
+ .slider-container .process-card{
+   width: 380px;
+   border: 1px solid #131212d5;
+   box-shadow: rgba(0, 0, 0, 0.877) 0px 27px  30px;
+   
+    padding: 55px 30px 30px;
+    max-width: 100%;
+    position: relative;
+    border: 1px solid #111111b6;
+    background: var(--btn-bg-color);
+    border-radius: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 15px;
+
+ }
+ .process-card .count{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    font-size: var(--font-15);
+    background: var(---txt-blk);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    border-top: 1px solid #ffffff3f;
+    transition: 0.32s 
+
+ }
+ .process-card i{
+    font-size: var(--font-28);
+    margin-top: 10px;
+    transition: 0.32s 
+ }
+ .process-card h5{
+    font-size: var(--font-h5);
+    font-weight: 500;
+    text-transform: capitalize;
+    margin-top: 5px;
+    text-align: left;
+    transition: 0.32s 
+ }
+ .process-card p{
+    font-size: var(--font-15);
+    color: var(---txt-white-grey);
+    line-height: 22px;
+    font-weight: 400;
+    text-align: left;
+    transition: 0.32s 
+ }
+ .process-card .step{
+    max-width: 100%;
+    padding: 8px 15px;
+    background: var(---txt-blk);
+    opacity: 0.8;
+    border-radius: 35px;
+    font-size: var(--font-15);
+    text-transform: capitalize;
+    margin: 10px 0;
+    color: var(---txt-white);
+    transition: 0.32s 
+ }
+ .process-card:hover .count,
+ .process-card:hover h5,
+ .process-card:hover p,
+ .process-card:hover .step,
+ .process-card:hover i{
+    transform: scale(1.03);
+ }
+ 
+ .process-slide-card{
+    max-width: 100%;
+    margin: 0 auto;
+    width: 70%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
+    padding:  30px;
+    border-top: 1px solid #ffffff15;
+    border-radius: 20px;
+    background: var(--secondary-color);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    transition: var(--transition-2);
+ }
+ .process-slide-card:hover{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 25px 15px;
+ }
+ .process-slide-card .process-card-left{
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: flex-start;
+    align-items: start;
+ }
+ .process-card-left h5{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: left;
+    gap: 10px;
+    font-weight: 600;
+    opacity: 0.8;
+ }
+ .process-card-left h5 i{
+    display: block;
+    margin-top: 5px;
+
+ }
+ .process-card-left p{
+    font-size: var(--font-15);
+    margin-left: 10px;
+    margin-top: 5px;
+    color: var(---txt-white-grey);
+
+ }
+ .process-slide-card .process-card-right{
+    width: 100%;
+    max-width: 100%;
+ }
+ .process-card-right .hero-btns{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    gap: 20px;
+ }
+
+ /* ===============================service info start here=======================  */
+ #service{
+    max-width: 100%;
+
+ }
+ .service-info{
+    max-width: 100%;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    gap: 50px;
+ }
+ .service-info .about-us{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+ }
+ .service-info .about-us .dot-txt{
+    
+    max-width: 100%;
+ }
+
+ .service-container{
+    max-width: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 25px;
+ }
+  .service-container .service-container-card{
+    width: 100%;
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 30px;
+  }
+  .service-container-card .service-cards{
+    max-width: 100%;
+    width: 100%;
+    padding: 25px;
+    border-radius: 10px;
+    background: var(--secondary-color);
+    border-top: 1px solid #ffffff13;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+     box-shadow: rgba(0, 0, 0, 0.836) 0px 15px 15px;
+     transition: var(--transition-2);
+  }
+  .service-container-card .service-cards:hover{
+     box-shadow: rgba(0, 0, 0, 0.836) 0px 25px 15px;
+    
+  }
+  .service-cards h5{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 15px;
+    opacity: 0.9;
+    text-transform: capitalize;
+    
+  }
+  .service-cards p{
+    font-size: var(--font-15);
+    color: var(---txt-white-grey);
+    font-weight: 500;
+    margin-bottom: 15px;
+   
+  }
+  .service-cards .service-img,
+  .service-cards .service-img-slider{
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+    transform: scale(1);
+    border-radius: 8px;
+    transition: var(--transition-1);
+  }
+
+ .service-img:hover img{
+    transform: scale(1.02);
+ }
+  .service-img img{
+    width: 100%;
+    transition: var(--transition-1);
+    height: 100%;
+    object-fit: cover;
+    border-radius: 8px;
+
+  }
+  .gallery-carousel{
+    max-width: 100%;
+    margin: 0 auto;
+    overflow: hidden;
+    position: relative;
+  }
+   .gallery-carousel .carousel-items{
+    display: flex;
+    gap: 20px;
+    animation: gallary 7s linear infinite;
+    
+    
+ }
+
+  .gallery-carousel::after,
+ .gallery-carousel::before,
+ .service-logo-slider::after,
+ .service-logo-slider::before{
+        content: "";
+        position: absolute;
+        top: 0;
+        width: 70px;
+        height: 100%;
+        z-index: 2;
+        pointer-events: none;
+    }
+    .gallery-carousel::before,
+     .service-logo-slider::before {
+  left: 0;
+  background: linear-gradient(to right, #0A0A0A, transparent);
+}
+
+.gallery-carousel::after,
+ .service-logo-slider::after {
+  right: 0;
+  background: linear-gradient(to left, #0A0A0A, transparent);
+}
+ .carousel-img{
+    display: block;
+    margin: 2px;
+    height: 250px;
+    width: 100%;
+    object-fit: cover;
+    transition: var(--transition-2);
+    transform: scale(1);
+    border-radius: 15px;
+    cursor: pointer;
+    z-index: 1;
+    
+   
+    
+ }
+  .carousel-img:hover {
+    transform: scale(1.01);
+  }
+ @keyframes gallary{
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(-100%);
+    }
+ } 
+
+
+ .service-logo-slider{
+    margin-top: 5%;
+    max-width: 100%;
+    position: relative;
+    background: #11111123;
+    padding: 1% 0;
+    border-radius: 40px;
+ }
+
+ .service-logo-one{
+    margin: 10px 0;
+      transition: var(--transition-1);
+ }
+ .service-logo-container{
+     max-width: 100%;
+    display: flex;
+    width: 100%;
+   height: auto;
+    
+    overflow: hidden;
+    
+ }
+  .service-logo-container::-webkit-scrollbar{
+    display: none;
+  
+ }
+
+ .service-logo-card{
+      width: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto auto  ;
+    
+    flex: none;
+    animation: 15s slider infinite linear;
+  
+ }
+   
+  
+ .service-logo-card.b{
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto;
+    
+    flex: none;
+    animation: 18s slider2 infinite linear;
+ }
+.service-logo-card .logo-body{
+    max-width: 100%; 
+    width: 80%;   
+    padding: 12px 5px;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 10px;
+    border-radius: 35px;
+    background: var(--secondary-color);
+    border: 1px solid #ffffff11;
+    opacity: 0.7;
+    transition: var(--transition-1);
+    
+
+}
+.logo-body:hover {
+    opacity: 1;
+
+}
+
+.logo-body i{
+    font-size: var(--font-20);
+   
+}
+.logo-body p{
+    font-size: var(--font-18);
+    text-align: center;
+    font-weight: 500;
+    text-transform: capitalize;
+    color: var(---txt-white-grey);
+}
+ @keyframes slider{
+   from{
+       transform: translateX(0);
+   }
+   to{
+       transform: translateX(-100%);
+   }
+   
+}
+@keyframes slider2{
+   from{
+       transform: translateX(-100%);
+   }
+   to{
+       transform: translateX(0);
+   }
+   
+}
