--- a/asset/CSSFile/style.css
+++ b/asset/CSSFile/style.css
@@ -1398,7 +1398,8 @@ main{
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    gap: 50px;
+    gap: 20px;
+    margin-bottom: 15px;
  }
  .service-info .about-us{
     display: flex;
@@ -1892,10 +1893,14 @@ main{
 .count-card:hover{
     box-shadow: rgba(22, 22, 22, 0.205) 0px -10px 5px;
 }
+.count-card h3{
+    text-align: center;
+}
 .count-card p{
     font-size: var(--font-15);
     color: var(---txt-white-grey);
     text-transform: capitalize;
+    text-align: center;
 }
 .testimonial-container .choose-container{
     height: 600px;
@@ -2048,6 +2053,7 @@ main{
     justify-content: space-between;
     align-items: center;
     gap: 20px;
+    transition: var(--transition-1);
 }
 .faq-container .service-info{
     width: 100%;
@@ -2196,6 +2202,7 @@ main{
     justify-content: space-between;
     align-items: center;
     padding: 20px 80px;
+    gap: 50px;
 }
 .grow-container .service-info{
     width: 100%;
@@ -2221,6 +2228,7 @@ main{
 }
 .service-info .grow-card{
     max-width: 100%;
+    width: 100%;
     border-bottom: 1px solid #ffffff13;
     padding-bottom: 5px;
     display: flex;
@@ -2392,6 +2400,9 @@ footer .foot{
 #contact{
     max-width: 100%;
     position: relative;
+   
+    
+
 }
 .contact-container{
     max-width: 100%;
